--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 
 <body>
 
-    <h1>Lista Spesa :</h1>
-    <button id="add-item">Aggiungi qualcosa</button>
+    
+    <header>
+        <h1>Lista Spesa :</h1>
+        <button id="add-item">Aggiungi qualcosa</button>
+    </header>
+
 
     <ul id="list">
     </ul>
