--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 
 <body>
-
-    
-    <header>
-        <h1>Lista Spesa :</h1>
-        <button id="add-item">Aggiungi qualcosa</button>
-    </header>
+    <div class="container">
 
 
-    <ul id="list">
-    </ul>
+        <header>
+            <h1>LA MIA LISTA :</h1>
+            <button id="add-item">Aggiungi qualcosa</button>
+        </header>
+
+
+        <ul id="list">
+        </ul>
+
+    </div>
 
 
     <script src="./script.js"></script>
