--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container">
 
 
-        <header>
-            <h1>LA MIA LISTA :</h1>
-            <button id="add-item">Aggiungi qualcosa</button>
-        </header>
+
+        <h1>LA LISTA DI OGGI</h1>
+        <button id="add-item">Aggiungi qualcosa</button>
+
 
 
         <ul id="list">
