--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 <body>
     <div class="container">
 
-
-
         <h1>LA LISTA DI OGGI</h1>
         <button id="add-item">Aggiungi qualcosa</button>
 
+    </div>
 
-
+    <div class="list">
         <ul id="list">
         </ul>
-
     </div>
 
 
+    
     <script src="./script.js"></script>
 </body>
 
